--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
   </head>
   <body>
     <p>learning Git</p>
-<<<<<<< HEAD
-    <h1>🇧🇩</h1>
-=======
-    <h1>hasib</h1>
->>>>>>> main
+    <h1>bangladesh</h1>
   </body>
 </html>
